--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
         <div class="container text-center">
             <h4>Welocme to the</h4>
             <h1>Repid<br> <strong>Responce Force</h1>
-            <p>Coinbase Prime is an integrated solution that provides secure custody, an advanced trading platform, and prime services so you can manage your crypto assets in one place.
-                With smart order routing, our clients can access the broader crypto marketplace rather than relying solely on prices from Coinbase's exchange. This technology will automatically route your order to the supported exchange with the best all-in prices (including trading fees).
+            <p>The modern police structure took its birth in early 19th century and since that time the work is expanding and becoming complex and demanding. A professionally designed policing structure is a basic necessity of the modern day society where police is supposed to be the prime law enforcing agency to maintain law and order in the society without violating basic human rights.
+The history of modern day Sindh Police can be traced from The British Rule. The British merchants formed the East India Company in 1600 and established factories in Surat, Calicut and Masaliputam in Bengal during the Mughal Empire era. Sir Charles Napier was highly inspired by the Irish Constabulary model, which according to him was the best-suited policing model for a colonial state like India.
+The police force organized by Napier was separate and self-contained force exclusively meant for maintaining public order and prevention and detection of crime. The events, in and after 1857 completely transformed the perspective of the liberal and civilized reformists. The checks and controls over police were termed as imperative and compelling necessity in order to effectively suppress the natives and to keep Policemen subjugated in order to avoid any future mutiny.
+Hence it was suggested that judicial and police powers should be placed under the supervision of the district officer. For this purpose, a police commission was constituted on 17th August 1860. The commission, after a series of consolations with all stakeholders and prolonged deliberations, recommended a number of propositions to organize the police in India on uniform basis.
+On the basis of recommendations of the commission, Sir Bartle Frere, the then Home Member, introduced the bill in the Imperial Legislative Council on 29th September 1860. The bill was passed into a law as Act V of 1861, on 22nd of March 1861 by the Legislative Council. At present Sindh Police is working under The Sindh (Repeal of the Police Act, 1861 and Revival of Police Order, 2002) (Amendment) Act, 2019.
             </p>
     </section>
 
