--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="/Images/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
-    <title>Rapid Responce Force</title>
+    <title>Rapid Response Force</title>
 </head>
 <body>
     <section class="main">
         <div class="container text-center">
             <h4>Welocme to the</h4>
-            <h1>Repid<br> <strong>Responce Force</h1>
+            <h1>Rapid<br> <strong>Responce Force</h1>
             <p>The modern police structure took its birth in early 19th century and since that time the work is expanding and becoming complex and demanding. A professionally designed policing structure is a basic necessity of the modern day society where police is supposed to be the prime law enforcing agency to maintain law and order in the society without violating basic human rights.
 The history of modern day Sindh Police can be traced from The British Rule. The British merchants formed the East India Company in 1600 and established factories in Surat, Calicut and Masaliputam in Bengal during the Mughal Empire era. Sir Charles Napier was highly inspired by the Irish Constabulary model, which according to him was the best-suited policing model for a colonial state like India.
 The police force organized by Napier was separate and self-contained force exclusively meant for maintaining public order and prevention and detection of crime. The events, in and after 1857 completely transformed the perspective of the liberal and civilized reformists. The checks and controls over police were termed as imperative and compelling necessity in order to effectively suppress the natives and to keep Policemen subjugated in order to avoid any future mutiny.
